tests/tried.txt
>>> import redis
>>> from redis import StrictRedis
>>> sr = StrictRedis(host="localhost", port=6379, db=0)
>>> sr.get("foo")
'bar'
>>> class TmpObject(object):
...     def __init__(self):
...         self.x = "initial"
...     def some_method(self):
...         return "output"
...
>>> from pickle import dumps
>>> tmp_object = TmpObject()
>>> tmp_object.x = "mediate"
>>> tmp_object_2 = TmpObject()
>>> tmp_object.x
'mediate'
>>> tmp_object_2.x
'initial'
>>> p_obj_1 = dumps(tmp_object)
>>> p_obj_2 = dumps(tmp_object_2)
>>> sr.get('foo')
'bar'
>>> sr.set("tmp1", p_obj_1)
True
>>> sr.set("tmp2", p_obj_2)
True
>>> p_obj_1 = None
>>> unset p_obj_2
  File "<stdin>", line 1
    unset p_obj_2
                ^
SyntaxError: invalid syntax
>>> p_obj_2 = None
>>> p_obj_1
>>> sr.get('tmp1')
"ccopy_reg\n_reconstructor\np0\n(c__main__\nTmpObject\np1\nc__builtin__\nobject\np2\nNtp3\nRp4\n(dp5\nS'x'\np6\nS'mediate'\np7\nsb."
>>> from pickle import loads
>>> obj1 = loads(sr.get('tmp1'))
>>> obj2 = loads(sr.get('tmp2'))
>>> obj1.x
'mediate'
>>> obj2.x
'initial'
>>> obj1.some_method()
'output'
>>> obj2.some_method()
'output'
>>> exit

